force-app/main/default/objects/Integration_Staging__c/Integration_Staging__c.object-meta.xml
<CustomObject>
    <label>Integration Staging</label>
    <nameField>
        <label>Integration Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integrations Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>