force-app/main/default/objects/Integration_Staging__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Integrations Staging</relationshipLabel>
    <relationshipName>Integrations_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>