force-app/main/default/objects/Integration_Staging__c/fields/Field_10__c.field-meta.xml
<CustomField>
    <fullName>Field_10__c</fullName>
    <label>Field 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>