force-app/main/default/objects/Integration_Staging__c/fields/Field_12__c.field-meta.xml
<CustomField>
    <fullName>Field_12__c</fullName>
    <label>Field 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>