force-app/main/default/objects/Integration_Staging__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Warranty Registration</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>