force-app/main/default/objects/Integration_Staging__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>TextArea</type>
</CustomField>